[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
home = "0.5.4"
serde_json = "1.0.91"
structopt = "0.3.26"

[dependencies.chrono]
features = ["serde"]
version = "0.4.23"

[dependencies.serde]
features = ["derive"]
version = "1.0.152"
